--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,7 +2,11 @@
 current_version = 0.0.1
 commit = True
 tag = True
-
-[bumpversion:file:README.md]
+parse = (?P<major>\d+)(\.(?P<minor>\d+))?(\.(?P<patch>\d+))?
+serialize = 
+	{major}.{minor}.{patch}
+	{major}.{minor}
+	{major}
 
 [bumpversion:file:Dockerfile]
+
